# malbolge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _r_e_a_d_m_e_8md_source.html  _r_e_a_d_m_e___a_p_i_8md_source.html  annotated.html  architecture.html  argument__parser_8hpp_source.html  c__interface_8hpp.html  c__interface_8hpp__dep__incl.map  c__interface_8hpp__dep__incl.md5  c__interface_8hpp_source.html  c__interface__wasm_8hpp.html  c__interface__wasm_8hpp__incl.map  c__interface__wasm_8hpp__incl.md5  c__interface__wasm_8hpp_source.html  classes.html  classmalbolge_1_1argument__parser-members.html  classmalbolge_1_1argument__parser.html  classmalbolge_1_1debugger_1_1client__control-members.html  classmalbolge_1_1debugger_1_1client__control.html  classmalbolge_1_1debugger_1_1client__control_1_1breakpoint-members.html  classmalbolge_1_1debugger_1_1client__control_1_1breakpoint.html  classmalbolge_1_1debugger_1_1script_1_1function-members.html  classmalbolge_1_1debugger_1_1script_1_1function.html  classmalbolge_1_1debugger_1_1script_1_1function__argument-members.html  classmalbolge_1_1debugger_1_1script_1_1function__argument.html  classmalbolge_1_1debugger_1_1script_1_1script__runner.html  classmalbolge_1_1execution__exception-members.html  classmalbolge_1_1execution__exception.html  classmalbolge_1_1math_1_1ternary-members.html  classmalbolge_1_1math_1_1ternary.html  classmalbolge_1_1math_1_1tritset-members.html  classmalbolge_1_1math_1_1tritset.html  classmalbolge_1_1parse__exception-members.html  classmalbolge_1_1parse__exception.html  classmalbolge_1_1system__exception-members.html  classmalbolge_1_1system__exception.html  classmalbolge_1_1utility_1_1gate-members.html  (+161 more)
cmake/: ccache.cmake  version.cmake  version.hpp.in
docs/: Doxyfile
gcov_html/: index-sort-l.html  index.html
master/: annotated.html  architecture.html  architecture_8doxy_source.html  argument__parser_8hpp_source.html  c__interface_8hpp.html  c__interface_8hpp__dep__incl.md5  c__interface_8hpp_source.html  c__interface__wasm_8hpp.html  c__interface__wasm_8hpp__incl.map  c__interface__wasm_8hpp_source.html  classes.html  classmalbolge_1_1argument__parser-members.html  classmalbolge_1_1argument__parser.html  classmalbolge_1_1debugger_1_1script_1_1function-members.html  classmalbolge_1_1debugger_1_1script_1_1function.html  classmalbolge_1_1debugger_1_1script_1_1function__argument-members.html  classmalbolge_1_1debugger_1_1script_1_1function__argument.html  classmalbolge_1_1debugger_1_1script_1_1script__runner-members.html  classmalbolge_1_1debugger_1_1script_1_1script__runner.html  classmalbolge_1_1execution__exception-members.html  classmalbolge_1_1execution__exception.html  classmalbolge_1_1math_1_1ternary-members.html  classmalbolge_1_1math_1_1ternary.html  classmalbolge_1_1math_1_1tritset-members.html  classmalbolge_1_1math_1_1tritset.html  classmalbolge_1_1parse__exception-members.html  classmalbolge_1_1parse__exception.html  classmalbolge_1_1system__exception-members.html  classmalbolge_1_1system__exception.html  classmalbolge_1_1utility_1_1raii-members.html  classmalbolge_1_1utility_1_1raii.html  classmalbolge_1_1utility_1_1signal-members.html  classmalbolge_1_1utility_1_1signal.html  classmalbolge_1_1utility_1_1signal_1_1connection-members.html  classmalbolge_1_1utility_1_1signal_1_1connection.html  classmalbolge_1_1utility_1_1string__constant-members.html  classmalbolge_1_1utility_1_1string__constant.html  classmalbolge_1_1virtual__cpu-members.html  classmalbolge_1_1virtual__cpu.html  classmalbolge_1_1virtual__memory-members.html  (+106 more)
playground/: index.html  index.js  malbolge.js  malbolge.wasm  malbolge.worker.js  style.css
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  (+74 more)
src/: c_interface.cpp  cpu_instruction.cpp  debugger.cpp  exception.cpp  loader.cpp  log.cpp  logging.cpp  main.cpp  normalise.cpp  virtual_cpu.cpp
test/: CMakeLists.txt  c_interface_test.cpp  calculate_test_coverage.sh  cpu_instruction_test.cpp  create_badge_url.sh  debugger_test.cpp  loader_test.cpp  log_test.cpp  main_test.cpp  normalise_test.cpp  source_location_test.cpp  test_helpers.hpp  traits_test.cpp  virtual_cpu_test.cpp  virtual_memory_test.cpp
test/algorithm/: container_ops_test.cpp  remove_from_range_test.cpp  trim_test.cpp
test/debugger/: client_control_test.cpp  script_parser_test.cpp  script_runner_test.cpp
test/math/: ipow_test.cpp  ternary_test.cpp  tritset_test.cpp
test/programs/: README.md  echo_debugger_script.dbg  hello_world.mal  hello_world_debugger_script.dbg  hello_world_normalised.mal
test/utility/: argument_parser_test.cpp  file_load_test.cpp  from_chars_test.cpp  gate_test.cpp  raii_test.cpp  signal_test.cpp  stream_helpers_test.cpp  stream_lock_guard_test.cpp  string_constant_test.cpp  string_view_ops_test.cpp  tuple_iterator_test.cpp  unescaper_test.cpp
v0.0.1/: annotated.html  classes.html  classmalbolge_1_1execution__exception-members.html  classmalbolge_1_1execution__exception.html  classmalbolge_1_1math_1_1ternary-members.html  classmalbolge_1_1math_1_1ternary.html  classmalbolge_1_1math_1_1tritset-members.html  classmalbolge_1_1math_1_1tritset.html  classmalbolge_1_1parse__exception-members.html  classmalbolge_1_1parse__exception.html  classmalbolge_1_1system__exception-members.html  classmalbolge_1_1system__exception.html  classmalbolge_1_1utility_1_1raii-members.html  classmalbolge_1_1utility_1_1raii.html  classmalbolge_1_1virtual__cpu-members.html  classmalbolge_1_1virtual__cpu.html  classmalbolge_1_1virtual__memory-members.html  classmalbolge_1_1virtual__memory.html  classmalbolge_1_1virtual__memory_1_1iterator__generic-members.html  files.html  (+49 more)
(+736 files in other folders)
